# evaluation-fin-juillet-2024

./: .gitignore  Cargo.toml  README.md  Timesheet-evaluation.xlsx  build.rs  diesel.toml  package.json  pnpm-lock.yaml  svelte.config.js  tailwind.config.ts  vite.config.ts
app/lib/: ROUTES.ts  index.ts
app/lib/admin/: token.client.ts  token.server.ts
app/routes/: +page.server.ts
crates/imports/: Cargo.toml
crates/imports/src/: config.rs  lib.rs  notes.rs
crates/imports/src/notes/: models.rs
crates/macros/: Cargo.toml
data/: .~lock.4 - test donne - moyenne note.csv#  1 - test donne - moyenne note.csv  2 - test donne - moyenne note.csv  3 - test donne - moyenne note.csv  4 - test donne - moyenne note.csv  donnée import - juillet 2024 - configuration_note.csv  donnée import - juillet 2024 - note.csv  donnée test import - septembre 2024 - configuration_note.csv
data/donnees_eval_sept/: donnees_eval_sept_2024 - configuration.csv  donnees_eval_sept_2024 - note.csv
data/eval_sept_alea/: donnees_eval_sept_2024 - temp.csv
data/sheets/: YukiKanamaruTestMark.ods
looping/: MCD.lo1  MCD.loo
migrations/2024-07-26-144319_reset_db/: down.sql  up.sql
migrations/2024-07-27-144703_create_promotion/: down.sql  up.sql
migrations/2024-07-27-145559_create_etudiant/: down.sql  up.sql
migrations/2024-07-27-150055_create_semestre/: down.sql  up.sql
migrations/2024-07-27-151159_create_matiere/: down.sql  up.sql
migrations/2024-07-27-152437_create_note/: down.sql  up.sql
migrations/2024-07-28-071923_create_v_etudiant_note/: down.sql  up.sql
migrations/2024-07-28-073727_create_v_matiere_note/: down.sql  up.sql
migrations/2024-07-28-080309_create_v_etudiant_matiere_note/: down.sql  up.sql
migrations/2024-07-29-220819_create_configuration_note/: down.sql  up.sql
protos/: admin.proto  client.proto  commons.proto
src/: lib.rs  models.rs  modules.rs  reset.rs  seed.rs  servers.rs  token.rs
src/models/: table.rs  view.rs
src/modules/: config_note.rs  etudiant_moyenne.rs  etudiant_note.rs  etudiant_status.rs  get_semestre_etudiant_rangs.rs  raptrapages.rs  sem_mat.rs
src/servers/: admin.rs  client.rs
(+96 files in other folders)
